--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,11 @@
     </header>
 
     <!----------------->
-    <!-- HEADER PART -->
+    <!-- MAIN PART -->
     <!----------------->
-    <main>Main</main>
+    <main>
+      <div class="wrapper"></div>
+    </main>
 
     <!----------------->
     <!-- FOOTER PART -->
@@ -36,13 +38,9 @@
       <div class="footer__section">
         <div class="footer__section__about">
           <h2 class="footer__section__about__logo">Logo</h2>
-          <p>
-            Created by Microverse under CC license.
-          </p>
+          <p>Created by Microverse under CC license.</p>
         </div>
       </div>
     </footer>
-
-
   </body>
 </html>
