Modify html file to adjust to latest updates.

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Delicious Meal Restaurant</title>
-    <link rel="icon" href="./imgs/icon.png" type="image/x-icon" />
+    <title>Most Visited Countries</title>
   </head>
   <body>
     <!----------------->
