--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <title>Most Visited Countries</title>
 
     <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
   </head>
   <body>
@@ -18,10 +18,10 @@
     <header>
       <nav>
         <div id="logo">
-          <h2>Logo</h2>
+          <h2>Most Visited Countries</h2>
         </div>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="#">Home(24)</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -41,7 +41,7 @@
     <footer>
       <div class="footer__section">
         <div class="footer__section__about">
-          <h2 class="footer__section__about__logo">Logo</h2>
+          <h2 class="footer__section__about__logo">Most Visited Countries</h2>
           <p>Created by Microverse under CC license.</p>
         </div>
       </div>
